--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     window.onload = function () {
         // Simple check for mobile devices
         const isMobile = /iPhone|iPad|iPod|Android|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent);
-        const base_url = "E:/optimized_pifolio"
+        const base_url = ""
         if (isMobile) {
             window.location.href = base_url+"/mobile/home/home.html";
         } else {
