Remove commented-out links for cleaner code

--- a/desktop/projects/projects.html
+++ b/desktop/projects/projects.html
@@ -127,8 +127,8 @@
                     </ul>
                     
                     <a href="https://github.com/Shubhodippal/RecipePicker" target="_blank" class="read-more">View on GitHub</a>
-                    <a>||</a>
-                    <a href="https://recipepicker.shubhodip.in/" target="_blank" class="read-more">Visit Website</a>
+                    <!--a>||</a>
+                    <a href="https://recipepicker.shubhodip.in/" target="_blank" class="read-more">Visit Website</a-->
                 </div>
                 <div class="project-item">
                     <h3>Car Detection and Speed Estimation</h3>
